bugfix in amide formation reaction